# tue-api-wrapper

./: README.md  package.json
.github/: studyos-token-pr-test-1779462196.md
desktop/: README.md  electron-builder.yml  package-lock.json  package.json
docs/: surface-parity.md
go/: README.md
ios/: Package.resolved  README.md  project.yml
java/: README.md  build.gradle  settings.gradle
package/: pyproject.toml
package/src/tue_api_wrapper/: __init__.py  alma_documents_html.py  alma_enrollment_client.py  alma_enrollment_html.py  alma_enrollment_models.py  alma_exam_registration_client.py  alma_exam_registration_helpers.py  alma_exam_registration_html.py  alma_exam_registration_models.py  alma_partial.py  alma_portal_messages_client.py  alma_portal_messages_items_html.py  alma_portal_messages_models.py  alma_profile_client.py  alma_profile_models.py  alma_studyservice_client.py  alma_studyservice_models.py  api_routes_alma_documents.py  api_routes_alma_exam_registration.py  api_routes_alma_registration.py  api_routes_discovery.py  api_routes_edit_actions.py  api_routes_extended.py  api_routes_feedback.py  api_routes_ilias.py  api_routes_mail.py  api_routes_products.py  api_routes_profile.py  api_server.py  client.py  course_discovery_facets.py  course_discovery_lance.py  course_discovery_models.py  course_discovery_program_search.py  course_discovery_service.py  course_discovery_store.py  dashboard_builder.py  hsp_client.py  hsp_html.py  hsp_models.py  (+16 more)
package/src/tue_api_wrapper/sdk/: __init__.py  authenticated.py  discovery.py  portal.py  praxisportal.py  public.py
package/tests/: test_alma_enrollment_client.py  test_alma_enrollment_html.py  test_alma_exam_registration.py  test_alma_portal_messages_features.py  test_alma_profile.py  test_contract.py  test_course_discovery.py  test_dashboard_builder.py  test_dashboard_study_progress.py  test_feedback_api.py  test_hsp_client.py  test_ilias_auth.py  test_ilias_course_assignments.py  test_ilias_learning_auth.py  test_portal_cache.py  test_public_endpoints_live.py  test_public_products.py  test_sdk_facade.py
(+233 files in other folders)
