[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tue-api-wrapper"
version = "0.2.2"
description = "Python SDK and local servers for University of Tuebingen study systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sebastian Boehler" }]
license = "Apache-2.0"
keywords = ["university", "tuebingen", "alma", "ilias", "moodle", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "pillow>=10.4,<12",
  "python-multipart>=0.0.20,<1",
  "python-dateutil>=2.9,<3",
  "requests>=2.32,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
mcp = ["mcp>=1.26,<2"]
discovery = ["lancedb>=0.25,<1", "sentence-transformers>=5,<6"]

[project.scripts]
alma-academics = "tue_api_wrapper.alma_academics_cli:main"
alma-timetable = "tue_api_wrapper.cli:main"
alma-document = "tue_api_wrapper.alma_documents_cli:main"
ilias-content = "tue_api_wrapper.ilias_content_cli:main"
ilias-learning = "tue_api_wrapper.ilias_learning_cli:main"
ilias-root = "tue_api_wrapper.ilias_cli:main"
route-discovery = "tue_api_wrapper.route_discovery_cli:main"
tue-api-server = "tue_api_wrapper.api_server:main"
tue-mcp = "tue_api_wrapper.mcp_server:main"

[project.urls]
Homepage = "https://github.com/SebastianBoehler/tue-api-wrapper"
Repository = "https://github.com/SebastianBoehler/tue-api-wrapper"
Issues = "https://github.com/SebastianBoehler/tue-api-wrapper/issues"
Documentation = "https://github.com/SebastianBoehler/tue-api-wrapper#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
